--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "intervention/image": "^3.7",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
+        "laravel/scout": "^10.11",
         "laravel/tinker": "^2.8"
     },
     "require-dev": {
